# GenEC

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Pipfile  README.md  pyproject.toml  pytest.ini
.github/: FUNDING.yml  codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-environment/: action.yml
.github/workflows/: python-ci.yml  python-package.yml
GenEC/: main.py  utils.py
GenEC/core/: __init__.py  analyze.py  config_manager.py  config_schemas.py  configuration.py  configuration_builder.py  configuration_factory.py  configuration_manager.py  extraction_filters.py  input_strategies.py  manage_io.py  output_manager.py  prompts.py  specs.py  types.py  validation.py  workflows.py
GenEC/core/types/: output.py  preset_config.py
GenEC/presets/: example_preset-list.yaml  example_preset.yaml  sample_preset.yaml  sample_preset_list.yaml  test_preset.yaml
docs/: overview.md  setup.md
docs/configuration/: advanced-options.md  comparison.md  output-formats.md  preset-list.md  preset.md
docs/demos/preset-list_demo_1/demo/ref/data/: file1.txt  file3.txt
docs/demos/preset-list_demo_1/demo/source/data/: file1.txt  file2.txt
docs/demos/preset-list_demo_1/presets/: demo_preset_A.yaml  demo_preset_B.yaml  demo_preset_list.yaml
docs/demos/quick_start/basic_output/file1/: result.csv  result.json  result.txt  result.yaml
docs/demos/quick_start/preset-list_output/source/code_values/: result.csv  result.json  result.txt  result.yaml
docs/demos/quick_start/preset-list_output/source/normal_data/: result.csv  result.json  result.txt  result.yaml
docs/demos/quick_start/preset_output/file1/: result.csv  result.json  result.txt  result.yaml
docs/demos/quick_start/presets/: preset-list_config.yaml
docs/demos/quick_start/source/data/: file3.txt
docs/filters/: positional.md  regex-list.md  regex.md
docs/workflows/: basic.md  preset-list.md  preset.md
src/: genec.py  start_comparison  start_comparison.py  utils.py
tests/: .pylintrc  test_comparer.py  test_extractor.py
tests/integration_tests/: test_config_manager_workflows.py  test_configuration_manager_workflows.py  test_shared_file_skipping.py
tests/system_tests/: test_basic_workflow.py  test_preset_list_workflow.py  test_preset_workflow.py  test_preset_workflow_new.py
tests/system_tests/assets/basic_expected_output/extract_and_compare/: result.json  result.txt
tests/system_tests/assets/basic_expected_output/extract_only/: result.txt  result.yaml
tests/system_tests/assets/basic_expected_output_positional/extract_and_compare/: result.csv  result.json  result.txt  result.yaml
tests/system_tests/assets/basic_expected_output_positional/extract_only/: preset.yaml  result.csv  result.json  result.txt  result.yaml
tests/system_tests/assets/basic_expected_output_regex/extract_and_compare/: preset.yaml  result.csv  result.yaml
tests/system_tests/assets/basic_expected_output_regex/extract_and_compare/input_1/: result.csv  result.txt
tests/system_tests/assets/basic_expected_output_regex/extract_only/: preset.yaml  result.json
tests/system_tests/assets/basic_expected_output_regex_list/extract_and_compare/: preset.yaml  result.json  result.yaml
tests/system_tests/assets/basic_expected_output_regex_list/extract_only/: preset.yaml
tests/system_tests/assets/input/: file4.txt  input_1.txt
tests/system_tests/assets/input/presets/: positional_preset.yaml  preset_file1.yaml  preset_list1.yaml  preset_list_positional.yaml  preset_list_regex_list.yaml  preset_system_actions.yaml  regex_list_preset.yaml  regex_preset.yaml
tests/system_tests/assets/input/reference/: input_2.txt  positional_input_1.txt  positional_input_2.txt  positional_input_3.txt  regex_list_input_1.txt
tests/system_tests/assets/input/source/: positional_input_1.txt  positional_input_2.txt  positional_input_3.txt
tests/system_tests/assets/output/file1/: result.txt
tests/system_tests/assets/preset_expected_output/extract_and_compare/: result.txt
tests/system_tests/assets/preset_expected_output/extract_only/: result.csv  result.json  result.txt  result.yaml
tests/system_tests/assets/preset_expected_output_positional/extract_and_compare/: result.csv  result.json  result.txt  result.yaml
tests/system_tests/assets/preset_expected_output_positional/extract_only/: result.csv  result.json  result.txt  result.yaml
tests/system_tests/assets/preset_expected_output_regex/extract_and_compare/: result.csv  result.json  result.txt  result.yaml
tests/system_tests/assets/preset_expected_output_regex_list/extract_and_compare/: result.csv  result.json  result.txt  result.yaml
tests/system_tests/assets/preset_expected_output_regex_list/extract_only/: result.csv  result.json  result.txt  result.yaml
tests/unit_tests/: test_comparer.py  test_config_manager.py  test_configuration_builder.py  test_configuration_factory.py  test_configuration_manager.py  test_extraction_filters.py  test_extractor.py  test_input_manager.py  test_input_strategies.py  test_output_manager.py  test_validation.py  test_workflows.py
(+73 files in other folders)
